@@ -219,6 +219,20 @@
     <url-pattern>/bcdui/servletsSessionCached/*</url-pattern>
   </filter-mapping>
 
+  <!-- Allows for caching depending on scopes maintained in bcd_cache_scope -->
+  <filter>
+    <filter-name>bcdui4.DataModifiedFilter</filter-name>
+    <filter-class>de.businesscode.bcdui.web.cacheControl.DataModifiedFilter</filter-class>
+    <init-param>
+      <param-name>SCOPES_REFRESH_PERIOD_MS</param-name>
+      <param-value>30000</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>bcdui4.DataModifiedFilter</filter-name>
+    <url-pattern>/bcdui/servlets/*</url-pattern>
+  </filter-mapping>
+
   <!--
     BCD-UI Standard servlets
   -->
