@@ -1,0 +1,32 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+  Copyright 2010-2017 BusinessCode GmbH, Germany
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+  http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
+<BindingSet id="bcd_cache_scope" table="bcd_cache_scope" allowSelectAllColumns="true"
+   xmlns="http://www.businesscode.de/schema/bcdui/bindings-1.0.0">
+  <C id="scope" caption="Scope" isKey="true" nullable="0">
+    <Column>scope</Column>
+  </C>
+  <C id="scope_last_modified" caption="Scope Last Modified" type-name="TIMESTAMP">
+    <Column>scope_last_modified</Column>
+  </C>
+  <C id="earliest_next_modified" caption="Earlies Next Modified" type-name="TIMESTAMP">
+    <Column>earliest_next_modified</Column>
+  </C>
+  <C id="expires_min_offset_sec" caption="Minimum Expires" type-name="INTEGER">
+    <Column>expires_min_offset_sec</Column>
+  </C>
+</BindingSet>
+
